<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:text="Sexo"
        android:textColor="#2F477A"
        app:layout_constraintEnd_toEndOf="@+id/textViewEsGratis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEsGratis"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsGratis" />

    <TextView
        android:id="@+id/textViewContraseñaNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="contraseña Nueva"
        android:textColor="#2F477A"
        app:layout_constraintEnd_toEndOf="@+id/textViewEsGratis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEsGratis"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsGratis" />

    <TextView
        android:id="@+id/textViewNombree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview_apellidos"
        android:textColor="#2F477A"
        app:layout_constraintEnd_toEndOf="@+id/textViewEsGratis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEsGratis"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsGratis" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="420dp"
        android:layout_height="175dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unnamed" />

    <EditText
        android:id="@+id/editTextTextEmailAddress6"
        android:layout_width="145dp"
        android:layout_height="20dp"
        android:layout_marginTop="104dp"
        android:background="#F8F4F4"
        android:backgroundTint="#F4F0F0"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#750A0A"
        android:backgroundTintMode="screen"
        android:text="Facebook"
        android:textAllCaps="false"
        android:textColor="#FAF6F6"
        android:textIsSelectable="false"
        android:textSize="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewcorreoElectronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/textview_correoElectronico"
        android:textColor="#F8F7F7"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewcontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Contraseña"
        android:textColor="#FAF8F8"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="78dp"
        android:layout_height="42dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#4E71BA"
        android:ellipsize="marquee"
        android:scrollbarSize="10dp"
        android:text="@string/button_Entrar"
        android:textSize="10dp"
        app:iconSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="104dp"
        android:background="#FAF7F7"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNocerrarSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/textview_cerrarseccion"
        android:textColor="#FBF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNocerrarSession"
        app:layout_constraintTop_toTopOf="@+id/textViewNocerrarSession" />

    <TextView
        android:id="@+id/textView1Olvidodecontrasñea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/Textviewolvidocontraseña"
        android:textColor="#FBF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="Registrate"
        android:textColor="#2F477A"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEsGratis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Es gratis (y lo seguirá siendo)"
        android:textColor="#2F477A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewRegistrate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewRegistrate"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrate" />

    <TextView
        android:id="@+id/textViewApellidoos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Apellidos"
        android:textColor="#2F477A"
        app:layout_constraintEnd_toEndOf="@+id/textViewEsGratis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEsGratis"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsGratis" />

    <TextView
        android:id="@+id/textViewCorreoelectronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Correo Electronico"
        android:textColor="#2F477A"
        app:layout_constraintEnd_toEndOf="@+id/textViewEsGratis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEsGratis"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsGratis" />

    <TextView
        android:id="@+id/textViewFechadenacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="Fecha de Nacimiento"
        android:textColor="#2F477A"
        app:layout_constraintEnd_toEndOf="@+id/textViewEsGratis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEsGratis"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsGratis" />

    <Button
        android:id="@+id/buttonRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#70A016"
        android:text="@string/button_Registrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="20dp"
        android:background="#FAF6F6"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textViewApellidoos"
        app:layout_constraintStart_toEndOf="@+id/textViewNombree"
        app:layout_constraintTop_toTopOf="@+id/textViewNombree"
        app:layout_constraintVertical_bias="0.312" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:background="#FBF9F9"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApellidoos"
        app:layout_constraintStart_toEndOf="@+id/textViewApellidoos"
        app:layout_constraintTop_toTopOf="@+id/textViewApellidoos"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextEmailAddress7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="#F6F3F3"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCorreoelectronico"
        app:layout_constraintStart_toEndOf="@+id/textViewCorreoelectronico"
        app:layout_constraintTop_toTopOf="@+id/textViewCorreoelectronico"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#FFFCFC"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textViewContraseñaNueva"
        app:layout_constraintStart_toEndOf="@+id/textViewContraseñaNueva"
        app:layout_constraintTop_toTopOf="@+id/textViewContraseñaNueva"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="#FAF7F7"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFechadenacimiento"
        app:layout_constraintStart_toEndOf="@+id/textViewFechadenacimiento"
        app:layout_constraintTop_toTopOf="@+id/textViewFechadenacimiento"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="¿Por que tengo dar esta informacion?"
        android:textColor="#3B5998"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="2dp"
        android:fadingEdge="horizontal"
        android:foregroundGravity="fill_horizontal"
        android:gravity="clip_horizontal"
        android:orientation="horizontal"
        android:requiresFadingEdge="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSexo"
        app:layout_constraintStart_toEndOf="@+id/textViewSexo"
        app:layout_constraintTop_toTopOf="@+id/textViewSexo">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:text="Mujer" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:text="Hombre" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="27dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSexo"
        app:layout_constraintStart_toEndOf="@+id/textViewSexo"
        app:layout_constraintTop_toTopOf="@+id/textViewSexo"
        app:layout_constraintVertical_bias="0.677"
        app:srcCompat="@drawable/venus_marte" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="27dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNombree"
        app:layout_constraintStart_toEndOf="@+id/textViewNombree"
        app:layout_constraintTop_toTopOf="@+id/textViewNombree"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/usuario" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="29dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApellidoos"
        app:layout_constraintStart_toEndOf="@+id/textViewApellidoos"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombree"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ascensor" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="107dp"
        android:layout_height="104dp"
        android:layout_marginTop="176dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewRegistrate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dsadsadsad" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="73dp"
        android:layout_height="139dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRegistrate"
        app:layout_constraintStart_toEndOf="@+id/textViewRegistrate"
        app:layout_constraintTop_toTopOf="@+id/textViewRegistrate"
        app:layout_constraintVertical_bias="0.521"
        app:srcCompat="@drawable/comentario_usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>